# store-panel

./: .gitignore
client/desktop/: CMakeLists.txt
client/desktop/GUI/: CMakeLists.txt  CMakeLists.txt.user.22  GUI.pro  GUI.pro.user.22  main.cpp  mainwindow.cpp  mainwindow.h
client/desktop/GUI/defines/enums/: MenuItems.hpp
client/desktop/GUI/icons/: CMakeLists.txt
client/desktop/GUI/src/screens/Calculator/: Calculator.cpp  Calculator.h
client/desktop/GUI/src/screens/Clients/: Clients.cpp  Clients.h
client/desktop/GUI/src/screens/Ingredients/: Ingredients.cpp  Ingredients.h
client/desktop/GUI/src/screens/Menu/: Menu.cpp  Menu.h
client/desktop/GUI/src/screens/Orders/: Orders.cpp  Orders.h
client/desktop/GUI/ui/: Clients.ui  Ingredients.ui  Menu.ui  Orders.ui  calculator.ui  calculator.ui.autosave  mainwindow.ui
client/desktop/src/: CMakeLists.txt
client/desktop/src/app/: CMakeLists.txt  main.cpp
client/desktop/src/common/: CmakeLists.txt
client/desktop/src/common/enums/: CMakeLists.txt  IngridientsServiceEnums.hpp  OrdersServiceEnums.hpp
client/desktop/src/common/structs/: CMakeLists.txt  IngridientsServiceStructs.hpp  MenuServiceStructs.hpp  OrdersServiceStructs.hpp
client/desktop/src/services/: CmakeLists.txt
client/desktop/src/services/inc/: ClientsService.hpp  IngridientsService.hpp  MenuService.hpp  OrdersService.hpp
client/desktop/trace/: index.html  style.css
client/desktop/trace/js/: main.js  ws.js
server/: .env.example  .gitignore  README.md  fakeData.js  index.js  package-lock.json  package.json  swagger.js
server/src/controllers/: ClientController.js  IngredientController.js  MenuController.js  MenuIngredientController.js  OrderController.js  UserController.js
server/src/middleware/: ErrorHandlingMiddleware.js  authMiddleware.js  checkRoleMiddleware.js
server/src/models/: Client.js  Ingredient.js  Menu.js  MenuIngredient.js  Order.js  User.js
server/src/routes/: ClientRouter.js  IngredientRouter.js  MenuIngredient.js  MenuRouter.js  OrderRouter.js  UserRouter.js  index.js
server/src/websocket/: index.js
server/src/websocket/events/: orderToKitchenEventHandler.js
(+6 files in other folders)
